Anhang + Diskussion bis auf Ausblick

--- a/1 Einleitung.tex
+++ b/1 Einleitung.tex
@@ -15,14 +15,14 @@ gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}.
 Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Bei Männern
 ist ein solches Verhalten möglicherweise schambehaftet.
 
-% victim blaming
+% Victim Blaming
 Wie Hacker \parencite{Friedrich_Hacker} 
 in seinem Zitat beschrieben hat, sucht der Aggressor sich zu rechtfertigen, er fällt
-dem \textit{victim blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung
+dem \textit{Victim Blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung
 dem Geschädigten zuschreibt. 
 
 % Gewaltmythen
-Victim blaming ist ein großer Aspekt von Gewaltmythen. Trotz jahrelanger Forschung in 
+Victim Blaming ist ein großer Aspekt von Gewaltmythen. Trotz jahrelanger Forschung in 
 diesem Gebiet, sind diese Mythen heutzutage noch weit verbreitet. 
 Sie beruhen auf falschen Annahmen der Verantwortung und deutet eine gewisse Einflussnahme 
 des Opfers an.
