--- a/4 Ergebnisse/Tabelle H1 Spearman.tex
+++ b/4 Ergebnisse/Tabelle H1 Spearman.tex
@@ -1,5 +1,5 @@
 \begin{table}[htb]
-    \caption[Mittelwerte, Standardabweichung und Korrelation von Aggression und victim blaming]{\textit {Mittelwerte, Standardabweichung und Korrelation von Aggression und victim blaming}} 
+    \caption[Mittelwerte, Standardabweichung und Korrelation von Aggression und Victim Blaming]{\textit {Mittelwerte, Standardabweichung und Korrelation von Aggression und Victim Blaming}} 
     \label{H1_Spearman}
     \centering
     \begin{adjustbox}{width=6.5cm} %{maxwidth=\textwidth}
@@ -9,7 +9,7 @@
         & $M$   & $SD$ & 1 \\
       \hline
     1 Aggression      & 1.88  & 0.43   & $-$      \\
-    2 victim blaming  & 26.46 & 27.98  & .18      \\
+    2 Victim Blaming  & 26.46 & 27.98  & .18      \\
        \hline
     \end{tabular}
     \end{adjustbox}
