--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -28,21 +28,36 @@ Zusätzlich zu den weiterführenden Analysen von Aggression und DVMAS wurde auch
 
 
 \section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
-%Ergebnis explorativ letztes
-%Auch die explorative Untersuchung der Differenz zwischen den biologischen Geschlechtern in Anbetracht der Aggression, wurde mithilfe des t-Tests für unabhängige Stichproben getestet. Der Levene Test fiel mit $F$~5.715 signifikant aus. Das bedeutet, dass durch die Varianzunterschiede es zu falsche Schlüsse aus dem t-Test kommen kann.
-%Der Unterschied zwischen Männern und Frauen war signifikant ($t$(433.64)~=~2.18, $p$~=~.0.30). Die Aggression war bei Männern durchschnittlich 0.07 Einhaeiten niedriger (95\%$-$CI[0.01, 0.14]).
+Im folgenden Unterkapitel werden die Ergebnisse der Hypothesen, wie auch die der Post$-$hoc Analyse interpretiert, disskutiert und in den aktuellen Forschungsstand eingeordnet.
+
+% H1:
+Die H1 zeigt ein nicht signifikantes Ergebnis. Die Aggression korreliert nicht mit Victim Blaming. Dieses Ergebnis deckt sich mit dem Befund von \textcite{H1_moderation_2020}. Das vorliegende nicht signifikante Ergebnis kann möglicherweise auf die bimodale Verteilung zurückgeführt werden. Wie in Abbildung~\ref{Histogramm VicBlame} ersichtlich, gaben sehr viele Probanden dem Täter, auf der linken Seite, die Veranwortung. Auf der rechten Seite, beim Opfer, ist eine weitere vergrößerte Anhäufung der Verantwortungszuschreibung zu sehen. Gegebenenfalls waren die Vignetten zu polarisierend formuliert, oder beinhalteten zu wenige Informationen, die gemeinsam mit einer sozialen Erwünschtheit dazu führte, dass viele Teilnehmer die Veranwortung auf der Seite des Täters zuordneten und exessiv dem Täter die alleinige Veranwortung zuschrieben. Gegebenenfalls kam \textcite{H1_malasia_2012} zu einem signifikanten Ergebnis, da im Rahmen dieser Studie Jugendliche untersucht wurden. Konträr zur Vermutung, dass durch das junge Alter vieler Probanden sich die Ergebnisse mit denen von \textcite{H1_malasia_2012} ähneln werden, gleicht sich das Ergebnis mit dem von \textcite{H1_moderation_2020}. In Kapitel~\ref{subsec_2.1.1} wurde im Sinne der positiven Aggression von dessen Nutzen im Jugendalter berichtet \parencite{Aggression}. Gegebenenfalls weisen Personen im heranwachsenden Alter ein höheres Aggressionsniveau auf, das sich bei den jungen Erwachsenen bereits verringert hat. Die Stichprobe von \textcite{H1_moderation_2020} gleicht sich mehr mit der hier erhobenen und aus diesem Grund sind diese Ergebnisse besser vergleichbar, zumahl sie sich ähneln.
+
+% H2:
+Das signifikante Ergebnis der H2 bedeutet, dass Aggression positiv mit der Akzeptanz von Mythen häuslicher Gewalt korreliert. Obwohl bislang nicht viele Studien diese beien Konstrukte gemeinsam untersucht haben, zeigt diese Arbeit, wie auch die von \textcite{H2_u_3_Bhogal_2016, H1_moderation_2020} dass es einen Zusammenhang gibt. Demzufolge akzeptiert eine Person mit einem höheren Aggressionsniveau vermehrt die Mythen häuslicher Gewalt. Wie bereits in Kapitel~\ref{subsec_2.1.1} vermutet, kann es daran liegen, dass die Mythen Gewalt thematisieren, die oft, wenn nicht ausschließlich, ihren Ursprung in der Aggression haben. Wie \textcite{Def_Aggressivität_vs_violence} in Kapitel~\ref{subsec_2.1.1} berichtet wurde, ist Gewalt erlerntes Verhalten, geprägt duch kulturelle Ideologien. Die gesellschaftliche Wahrnehmung und Einstellung prägen auch die Mythen häuslicher Gewalt \parencite{Labelingtheory_plus, DVMAS_Peters}. Die gesellschaftlichen und kulturellen Einstellungen und Ideologien scheinen demzufolge sowohl die Mythen, wie auch die Gewalt zu bedingen. Aus dem vorliegenden signifikanten Ergebnis lässt sich vermuten, dass diese Gewalt Aggression beinhaltet.
+
 
 % H3:
-Der dadurch entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}.
+Die Moderationsanalyse der H3 zeigt eine nicht signifikante Interaktion des biologischen Geschlechts mit der Aggression und der Akzeptanz der Mythen häuslicher Gewalt. In Kapitel~\ref{subsec_2.2.3} wurde von Geschlechterunterschieden bezüglich der Aggressivität wie auch der Akzeptanz von Gewaltmythen berichtet \parencite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020}. Obwohl diese Studien darlegen, dass das Geschlecht sowohl auf die Aggression, wie auch auf die Akzeptanz von Mythen Auswirkungen hat, konnte diese Moderationsanalyse keinen Beleg darbieten, dass der Zusammenhang von Aggression und Akzeptanz von Gewaltmythen durch das Geschlecht beeinflusst wird. Bei der Prüfung der Voraussetzungen einer Homoskedastizität fiel der Whit-Test signifikan aus, das für eine Heteroskedastizität spricht. Der dadurch entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}. 
+Aufgrund des dennoch nicht signifikanten Moderationseffekt, wurde eine Analyse der Haupteffekte durchgeführt. Sie zeigt einen Effekt des Geschlechts auf die Akzeptanz, wie einen Effekt der Aggression auf die Akzeptanz. Dies bedeutet, dass unabhängig voneinander das Geschlecht und die Aggression Einfluss auf die Akzeptanz von Mythen häuslicher Gewalt nehmen. Der Einfluss des Geschlechts stimmen mit den Ergebnissen von \textcite{H3_2020} überein.
+% warum net signifikant wenn haupteffekte?
+
+
+%Explo
+% coor subskalen dvmas
+% corr subskalen vicblame
+Die Spearman$-$Rang$-$Korrelationen der Post$-$hoc Analyse fiel größtenteils signifikant aus. Alle Aggression$-$Subskalen korrelieren positiv untereinander und mit dem DVMAS. Bei der Korrelation mit der Verantwortungszuschreibung auf das Opfer korreliert ausschließlich die physische Aggression positiv mit der Verantwortungszuschreibung. Zur Untersuchung der Zusammenhänge wurde die Spearman$-$Korrelation verwendet, da bei der Prüfung der Voraussetzungen einer Pearson$-$Produkt$-$Moment$-$Korrelation die Aggression$-$Subskala große Ausreißer aufwies. Die signifikanten Korrelation der Subskalen sind mit der Validierung des Deutschen Aggressionsfragebogens \parencite{Aggressionsfragebogen} übereinstimmig. Somit unterstützen sie die Validität des verwendeten Fragbogens. Die signifikante positive Korrelation der Subskalen mit dem DVMAS dienen einer genaueren Untersuchung der H2 Korrelation. Das Ergebnis der Korrelation der Subskalen mit Victim Blaming weicht von dem Ergebnis von \textcite{H1_moderation_2020} ab. 
+% warum nur physisch signifikant?
+
 
 \section{Bewertung der Methode}   \label{sec_5.3}
 Dieses Unterkapitel betrachtet die verwendete Methode genauer. Es werden sowohl die Stärken, wie auch ihre Schwächen aufgewiesen.
-Durch die erreichte Stichprobe von $N$~=~432 konnte die zuvor berechnete Mindeststichprobe von 395 Probanden erreicht werden. Dies ist ein Argument für eine valide Erhebung. 
+Durch die erreichte Stichprobe von $N$~=~432 konnte die zuvor berechnete Mindeststichprobe von 395 Probanden erreicht werden. Dies ist ein Argument für eine valide Erhebung einer quantitativen Querschnittsstudie. Die Stichprobe wurde nichtrandomisiert erhoben, die sich durch den Schneeballeffekt vergrößerte.
 
-Der Einsatz von Manipulationschecks zur Überprüfung der Verständlichkeit und bewusste Wahrnehmung der dargebotenen Fallvignetten, trägt ebenfalls zu einer validen Untersuchung bei. Die Überprüfung des sozioökonomischen Status der Personen innerhalb der Fallvignetten kann zu Verwirrungen geführt haben, da gegebenenfalls von einem gemeinsamen sozioökonomischen Status des Paares ausgegangen wurde.
+Der Einsatz von Manipulationschecks zur Überprüfung der Verständlichkeit und bewusste Wahrnehmung der dargebotenen Fallvignetten, trägt ebenfalls zu einer validen Untersuchung bei. Die Überprüfung des sozioökonomischen Status der Personen innerhalb der Fallvignetten kann zu Verwirrungen geführt haben, da gegebenenfalls von einem gemeinsamen sozioökonomischen Status des Paares ausgegangen wurde. Dennoch gewährleisten die Überprüfungen eine gute Einschätzung der Verständlichkeit der Vignetten. Dies wurde ersichtlich durch die hohe Identifikation des Geschlechts und des kulturellen Status innerhalb der Fallvignetten. Das Geschlecht kann aufgrund der noch immer bestehenden Vorstellung eines überwiegend weiblichen Opfers zu dessen richtigen Identifikation geführt haben. Die ausländischen und somit, in einer deutschen Befragung, exotischeren Namen konnten der Grund für dessen hohe Rate an Identifikation sein.
 
-Der verwendete Aggressionsfragebogen, wie auch der Fragebogen zur Erfassung der Akzeptanz von Mythen häuslicher Gewalt zeigen beide eine hohe Reliabilität und Validität auf \parencite{Peters2003, Aggressionsfragebogen}. Der Aggressionsfragebogen, wie auch der deutsche DVMAS eigneten sich gut für die Erhebung der Variablen Aggression und Akzeptanz von Gewaltmythen. 
-Die Entscheidung die Fallvignetten zu Beginn zu präsentieren, diente der unvoreingenommenen Verantwortungszuschreibung seitens der Probanden. Diese präventive Maßnahme birgt jedoch auch Nachteile. Durch die festgelegten Reiehendolge, kann dies durch mögliche soziale Erwünschtheit zu Verzerrungen des Antwortverhaltens bei den Fragebögen geführt haben. Ebenfalls die Erhebung der, in den Fallvignetten befindlichen Variablen verleif nicht optimal. Jeder Proband erhielt ein psychisches und ein sexualisiertes Szenario. Die übrigen drei Variablen wurden randomisiert zugeteilt. Dies führte dazu, dass den Probanden gegebenenfalls die selbe Variable dargeboten wurde, nur ein Mal im sexualisierten und ein Mal im physischen Setting. 
+Der verwendete Aggressionsfragebogen, wie auch der Fragebogen zur Erfassung der Akzeptanz von Mythen häuslicher Gewalt zeigen beide eine hohe Reliabilität und Validität auf \parencite{Peters2003, Aggressionsfragebogen}. Der Aggressionsfragebogen, wie auch der deutsche DVMAS eigneten sich demzufolge gut für die Erhebung der Variablen Aggression und Akzeptanz von Gewaltmythen. 
+Die Entscheidung die Fallvignetten zu Beginn zu präsentieren, diente der unvoreingenommenen Verantwortungszuschreibung seitens der Probanden. Diese präventive Maßnahme birgt jedoch auch Nachteile. Die Fallvignetten forderten die Beurteilung eines sensiblen Themas und die Verantwortungszuschreibung der kritischen Situation. Durch diese Voreingenommenheit kann es zu sozial erwünschtem Antwortverhalten der späteren Fragbögen gekommen sein. Ebenfalls die Erhebung der, in den Fallvignetten befindlichen Variablen verleif nicht optimal. Jeder Proband erhielt ein psychisches und ein sexualisiertes Szenario. Die übrigen drei Variablen wurden randomisiert zugeteilt. Dies führte dazu, dass den Probanden gegebenenfalls die selbe Variable dargeboten wurde, nur ein Mal im sexualisierten und ein Mal im physischen Setting. 
 
 Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war den Teilnehmern selbst überlassen unter welchen Bedingungen sie an der Studie teilnehmen. Durch die abschließende Nachfrage der sinngemäßen Bearbeitung kann davon ausgegangen werden, dass es keine zu großen Störvariablen bei der Durchführung gab. Durch einen fehlenden Versuchsleiter entfielen dessen Effekte, wie zum Beispiel, dass sich ein Proband dadruch beobachtet fühlen kann. Dies führt zu objektiveren Datenerhebungen. Dennoch konnte keine aktive Kontrolle der Störvariablen erfolgen.
 
