--- a/SRH_Vorlage.tex
+++ b/SRH_Vorlage.tex
@@ -85,5 +85,6 @@
 
 \printbibliography[heading=bibintoc,title={Literaturverzeichnis}]
 \input{Anhang.tex}
+%\clearpage
 \input{Ehrenwörtliche Erklärung.tex}
 \end{document}
