--- a/2 Theorie/Theorie.tex
+++ b/2 Theorie/Theorie.tex
@@ -5,7 +5,7 @@ In diesem Kapitel werden zunächst die verwendeten Konstrukte Aggressivität und
 
 % 2.1 Konstrukte:
 \section{Konstrukte}    \label{sec_2.1}
-Im Anschluss erfolgt in den Unterkapiteln ,  und  eine Darbietung der einzelnen Konstrukte. Beginnend werden in ~\ref{subsec_2.1.1} Aggressivität und Aggression die Aggressivität und Aggression voneinander unterschieden und der Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Darbietung verschiedener Arten von Aggression und Theorien, die die Entstehung von Aggression versuchen zu erklären. In Kapitel ~\ref{subsec_2.1.2} Häusliche Gewalt wird auf Muster und Arten, auf mögliche Ursachen und Aufrechterhaltung und abschließend auf die Folgen von Gewalt eingegangen. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung gewisses Artikel der Istambul Konvention. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird dieser Begriff aufgefasst, sowie das victim blaming. Zum Schluss diesem Unterkapitel erfolgen theoretische Ansätze, die versuchen das Phänomen des vitim blamings zu erklären.
+Im Anschluss erfolgt in den Unterkapiteln ,  und  eine Darbietung der einzelnen Konstrukte. Beginnend werden in ~\ref{subsec_2.1.1} Aggressivität und Aggression die Aggressivität und Aggression voneinander unterschieden und der Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Darbietung verschiedener Arten von Aggression und Theorien, die die Entstehung von Aggression versuchen zu erklären. In Kapitel ~\ref{subsec_2.1.2} Häusliche Gewalt wird auf Muster und Arten, auf mögliche Ursachen und Aufrechterhaltung und abschließend auf die Folgen von Gewalt eingegangen. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung gewisses Artikel der Istambul Konvention. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird dieser Begriff aufgefasst, sowie das Victim Blaming. Zum Schluss diesem Unterkapitel erfolgen theoretische Ansätze, die versuchen das Phänomen des vitim blamings zu erklären.
 
 \input{2 Theorie/2.1.1 Aggressivität.tex}
 \input{2 Theorie/2.1.2 Häusliche Gewalt.tex}
@@ -13,7 +13,7 @@ Im Anschluss erfolgt in den Unterkapiteln ,  und  eine Darbietung der einzelnen 
 
 % 2.2 Theoretischer Hintergrund: Aktueller Forschungsstand
 \section{Aktueller Forschungsstand}   \label{sec_2.2}
-In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen Aggression und der Akzeptanz von Gewaltmythen, sowie der Tendez zum victim blaming? 
+In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen Aggression und der Akzeptanz von Gewaltmythen, sowie der Tendez zum Victim Blaming? 
 
 In den darauffolgenden Unterkapiteln ~\ref{subsec_2.2.1} Hypothese 1, ~\ref{subsec_2.2.2} Hypothese 2 und ~\ref{subsec_2.2.3} Hypothese 3 erfolgt die Herleitung der zu untersuchenden Hypothesen auf Basis bereits bestehender Befunde.
 
